--- a/con2.html
+++ b/con2.html
@@ -378,8 +378,8 @@
               <a href="#" class="table-l d-flex flex-column justify-content-between" :class="['table', { booked: isActive('A74') }]"
                 data-id="A74"><span>A74</span><span>A73</span></a>
 
-              <a href="#" class="table" :class="['table', { booked: isActive('D3') }]" data-id="D3">D3</a>
-              <a href="#" class="table"  :class="['table', { booked: isActive('D2') }]" data-id="D2">D2</a>
+              <a href="#" class="table" :class="['table', { booked: isActive('D3'), [getClassForTable('D3')]: getClassForTable('D3') }]" data-id="D3">D3</a>
+              <a href="#" class="table"  :class="['table', { booked: isActive('D2'), [getClassForTable('D2')]: getClassForTable('D2') }]" data-id="D2">D2</a>
             </div>
             <div class="d-flex flex-column gap-1">
               <a href="#" class="table-l d-flex flex-column justify-content-between" :class="['table', { booked2: isActive('A88') }]" @click="handleTableClick('A88')"
@@ -392,8 +392,8 @@
               <a href="#" class="table-l d-flex flex-column justify-content-between"  :class="['table', { booked: isActive('A82') }]"
                 data-id="A82"><span>A82</span><span>A81</span></a>
 
-              <a href="#" class="table"  :class="['table', { booked: isActive('D5') }]" data-id="D5">D5</a>
-              <a href="#" class="table"  :class="['table', { booked2: isActive('D4') }]" @click="handleTableClick('D4')" data-id="D4">D4</a>
+              <a href="#" class="table"  :class="['table', { [getClassForTable('D5')]: getClassForTable('D5') }]" data-id="D5">D5</a>
+              <a href="#" class="table"  :class="['table', { [getClassForTable('D4')]: getClassForTable('D4') }]" data-id="D4">D4</a>
             </div>
             <div class="d-flex flex-column gap-1">
               <a href="#" class="table-l d-flex flex-column justify-content-between"  :class="['table', { booked: isActive('A96') }]"
@@ -687,256 +687,9 @@
           bookingInfo: {
           date: "2023-12-11",
           tables: [
-            // {"table": "A1"},
-            // {"table": "A2"},
-            // {"table": "A3"},
-            // {"table": "A4"},
-            // {"table": "A5"},
-            // {"table": "A6"},
-            // {"table": "A7"},
-            // {"table": "A8"},
-            // {"table": "A9"},
-            // {"table": "A10"},
-            // {"table": "A11"},
-            // {"table": "A12"},
-            // {"table": "A13"},
-            // {"table": "A14"},
-            // {"table": "A15"},
-            // {"table": "A16"},
-            // {"table": "A17"},
-            // {"table": "A18"},
-            // {"table": "A19"},
-            // {"table": "A20"},
-            // {"table": "A21"},
-            // {"table": "A22"},
-            // {"table": "A23"},
-            // {"table": "A24"},
-            // {"table": "A25"},
-            // {"table": "A26"},
-            // {"table": "A27"},
-            // {"table": "A28"},
-            // {"table": "A29"},
-            // {"table": "A30"},
-            // {"table": "A31"},
-            // {"table": "A32"},
-            // {"table": "A33"},
-            // {"table": "A34"},
-            // {"table": "A35"},
-            // {"table": "A36"},
-            // {"table": "A37"},
-            // {"table": "A38"},
-            // {"table": "A39"},
-            // {"table": "A40"},
-            // {"table": "A41"},
-            // {"table": "A42"},
-            // {"table": "A43"},
-            // {"table": "A44"},
-            // {"table": "A45"},
-            // {"table": "A46"},
-            // {"table": "A47"},
-            // {"table": "A48"},
-            // {"table": "A49"},
-            // {"table": "A50"},
-            // {"table": "A51"},
-            // {"table": "A52"},
-            // {"table": "A53"},
-            // {"table": "A54"},
-            // {"table": "A55"},
-            // {"table": "A56"},
-            // {"table": "A57"},
-            // {"table": "A58"},
-            // {"table": "A59"},
-            // {"table": "A60"},
-                {"table": "A61"},
-            // {"table": "A62"},
-            // {"table": "A63"},
-            // {"table": "A64"},
-            // {"table": "A65"},
-            // {"table": "A66"},
-            // {"table": "A67"},
-            // {"table": "A68"},
-            // {"table": "A69"},
-            // {"table": "A70"},
-            // {"table": "A71"},
-            // {"table": "A72"},
-            // {"table": "A73"},
-            // {"table": "A74"},
-            // {"table": "A75"},
-            // {"table": "A76"},
-            // {"table": "A77"},
-            // {"table": "A78"},
-            // {"table": "A79"},
-            // {"table": "A80"},
-            // {"table": "A81"},
-            // {"table": "A82"},
-            // {"table": "A83"},
-            // {"table": "A84"},
-            // {"table": "A85"},
-            // {"table": "A86"},
-            // {"table": "A87"},
-            {"table": "A88"},
-            // {"table": "A89"},
-            {"table": "A90"},
-            // {"table": "A91"},
-            // {"table": "A92"},
-            // {"table": "A93"},
-            // {"table": "A94"},
-            // {"table": "A95"},
-            // {"table": "A96"},
-            // {"table": "B1"},
-            // {"table": "B2"},
-            // {"table": "B3"},
-            // {"table": "B4"},
-            // {"table": "B5"},
-            // {"table": "B6"},
-            // {"table": "B7"},
-            // {"table": "B8"},
-            // {"table": "B9"},
-            // {"table": "B10"},
-            // {"table": "B11"},
-            // {"table": "B12"},
-            // {"table": "B13"},
-            // {"table": "B14"},
-            // {"table": "B15"},
-            // {"table": "B16"},
-            // {"table": "B17"},
-            // {"table": "B18"},
-            // {"table": "B19"},
-            // {"table": "B20"},
-            // {"table": "B21"},
-            // {"table": "B22"},
-            // {"table": "B23"},
-            // {"table": "B24"},
-            // {"table": "B25"},
-            // {"table": "B26"},
-            // {"table": "B27"},
-            // {"table": "B28"},
-            // {"table": "B29"},
-            // {"table": "B30"},
-            // {"table": "B31"},
-            // {"table": "B32"},
-            // {"table": "B33"},
-            // {"table": "B34"},
-            // {"table": "B35"},
-            // {"table": "B36"},
-            // {"table": "B37"},
-            // {"table": "B38"},
-            // {"table": "B39"},
-            // {"table": "B40"},
-            // {"table": "B41"},
-            // {"table": "C1"},
-            // {"table": "C2"},
-            // {"table": "C3"},
-            // {"table": "C4"},
-            // {"table": "C5"},
-               {"table": "C6"},
-            // {"table": "C7"},
-            // {"table": "C8"},
-               {"table": "C9"},
-            // {"table": "C10"},
-            // {"table": "C11"},
-            // {"table": "C12"},
-            // {"table": "C13"},
-            // {"table": "C14"},
-            // {"table": "C15"},
-            // {"table": "C16"},
-            // {"table": "C17"},
-            // {"table": "C18"},
-            // {"table": "C19"},
-            // {"table": "C20"},
-            // {"table": "C21"},
-            // {"table": "C22"},
-            // {"table": "C23"},
-            // {"table": "C24"},
-            // {"table": "C25"},
-            // {"table": "C26"},
-            // {"table": "C27"},
-            // {"table": "C28"},
-            // {"table": "C29"},
-            // {"table": "C30"},
-            // {"table": "C31"},
-            // {"table": "C32"},
-            // {"table": "C33"},
-            // {"table": "C34"},
-            // {"table": "C35"},
-            // {"table": "C36"},
-            // {"table": "C37"},
-            // {"table": "C38"},
-            {"table": "C39"},
-            // {"table": "C40"},
-            // {"table": "C41"},
-            // {"table": "C42"},
-            // {"table": "C43"},
-            // {"table": "C44"},
-            // {"table": "C45"},
-            // {"table": "C46"},
-            // {"table": "C47"},
-            // {"table": "C48"},
-            // {"table": "C49"},
-            // {"table": "C50"},
-            // {"table": "C51"},
-            // {"table": "C52"},
-            // {"table": "C53"},
-            // {"table": "C54"},
-            // {"table": "C55"},
-            // {"table": "C56"},
-            // {"table": "C57"},
-            // {"table": "C58"},
-            // {"table": "C59"},
-            // {"table": "C60"},
-            // {"table": "C61"},
-            // {"table": "C62"},
-            // {"table": "C63"},
-            // {"table": "C64"},
-            // {"table": "C65"},
-            // {"table": "C66"},
-            // {"table": "C67"},
-            // {"table": "C68"},
-            // {"table": "D1"},
-            // {"table": "D2"},
-            // {"table": "D3"},
-            {"table": "D4"},
-            // {"table": "D5"},
-            // {"table": "D6"},
-            // {"table": "D7"},
-            // {"table": "E1"},
-            // {"table": "E2"},
-            // {"table": "E3"},
-            // {"table": "E4"},
-            // {"table": "E5"},
-            // {"table": "E6"},
-            // {"table": "E7"},
-            // {"table": "E8"},
-            {"table": "E9"},
-            {"table": "E10"},
-            {"table": "E11"},
-            {"table": "E12"},
-            {"table": "E13"},
-            {"table": "E14"},
-            {"table": "F1"},
-            {"table": "F2"},
-            {"table": "F3"},
-            {"table": "F4"},
-            {"table": "F5"},
-            {"table": "S1"},
-            // {"table": "S2"},
-            // {"table": "S3"},
-            // {"table": "S4"},
-            // {"table": "S5"},
-            // {"table": "S6"},
-            // {"table": "S7"},
-            // {"table": "S8"},
-            // {"table": "VVIP1"},
-            // {"table": "VVIP2"},
-            // {"table": "VVIP3"},
-            // {"table": "VVIP4"},
-            // {"table": "VVIP5"},
-            // {"table": "VVIP6"},
-            // {"table": "VVIP7"},
-            // {"table": "VVIP8"},
-            // {"table": "VVIP9"},
-            // {"table": "VVIP10"},
-            
+            {"table": "D4", "bookedType": "B"},
+            {"table": "D5" , "bookedType": "A"},
+
           ]
         }
       },
@@ -1018,9 +771,19 @@
         handleTableClick(table) {
             console.log("Table clicked:", table);
         },
-        // tableClass( _table ) {
-        //   return ['table', { booked: this.isActive('VVIP9') }];
-        // }
+        getClassForTable(table) {
+          const booking = this.bookingInfo.tables.find(bookedTable => bookedTable.table === table);
+          if (booking) {
+            switch (booking.bookedType) {
+              case 'A': return 'p1';
+              case 'B': return 'p2';
+              case 'C': return 'p3';
+              case 'D': return 'p4';
+              default: return '';
+            }
+          }
+          return '';
+        }
       },
   
     });
