--- a/con1.html
+++ b/con1.html
@@ -27,7 +27,7 @@
               <div class="d-flex flex-column justify-content-end gap-2">
                 <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('C14')]: getClassForTable('C14') }]"
                 data-id="C14"><span>C14</span><span>C13</span></a>
-                <a href="#" class="table" :class="['table', { booked: isActive('C12') }]" data-id="C12">C12</a>
+                <a href="#" class="table" :class="[{ [getClassForTable('C12')]: getClassForTable('C12') }]" data-id="C12">C12</a>
               </div>
 
               <div class="d-flex flex-column justify-content-end gap-2">
@@ -38,7 +38,7 @@
               <div class="d-flex flex-column justify-content-end gap-2">
                 <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('C23')]: getClassForTable('C23') }]"
                   data-id="C23"><span>C23</span><span>C22</span></a>
-                <a href="#" class="table" :class="[{ [getClassForTable('C21')]: getClassForTable('C21') }]" data-id="21">C21</a>
+                <a href="#" class="table" :class="[{ [getClassForTable('C21')]: getClassForTable('C21') }]" data-id="C21">C21</a>
               </div>
               <div class="d-flex flex-column justify-content-end gap-2">
                 <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('C29')]: getClassForTable('C29') }]"
@@ -113,9 +113,9 @@
                 <a href="#" class="table" :class="[{ [getClassForTable('C24')]: getClassForTable('C24') }]" data-id="C24">C24</a>
               </div>
               <div class="d-flex flex-column justify-content-end gap-2">
-                <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('C32')]: getClassForTable('C31') }]"
-                  data-id="32"><span>C32</span><span>C31</span></a>
-                <a href="#" class="table" :class="[{ [getClassForTable('C30')]: getClassForTable('C30') }]" data-id="30">C30</a>
+                <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('C32')]: getClassForTable('C32') }]"
+                  data-id="C32"><span>C32</span><span>C31</span></a>
+                <a href="#" class="table" :class="[{ [getClassForTable('C30')]: getClassForTable('C30') }]" data-id="C30">C30</a>
               </div>
               <div class="d-flex flex-column justify-content-end gap-2">
                 <a href="#" class="table-l d-flex flex-column justify-content-between":class="[{ [getClassForTable('C39')]: getClassForTable('C39') }]"
@@ -141,7 +141,7 @@
               </div>
               <div class="d-flex flex-column justify-content-end gap-2">
                 <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('C64')]: getClassForTable('C64') }]"
-                  data-id="64"><span>C64</span><span>C63</span></a>
+                  data-id="C64"><span>C64</span><span>C63</span></a>
                 <a href="#" class="table" :class="[{ [getClassForTable('C62')]: getClassForTable('C62') }]" data-id="C62">C62</a>
               </div>
               <div class="d-flex flex-column justify-content-end gap-2">
@@ -180,7 +180,7 @@
             </div>
             <div class="d-flex flex-column gap-2">
               <a href="#" class="table"  :class="[{ [getClassForTable('B10')]: getClassForTable('B10') }]"data-id="B10">B10</a>
-              <a href="#" class="table-l d-flex flex-column justify-content-between" :class="['table', { booked: isActive('B9') }]"
+              <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('B9')]: getClassForTable('B9') }]"
                 data-id="B9"><span>B9</span><span>B8</span></a>
               <a href="#" class="table" :class="[{ [getClassForTable('B7')]: getClassForTable('B7') }]" data-id="B7">B7</a>
               <a href="#" class="table"  :class="[{ [getClassForTable('B6')]: getClassForTable('B6') }]" data-id="B6">B6</a>
@@ -215,7 +215,7 @@
             </div>
             <div class="d-flex flex-column gap-2">
               <a href="#" class="table" :class="[{ [getClassForTable('B35')]: getClassForTable('B35') }]" data-id="B35">B35</a>
-              <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('B33')]: getClassForTable('B33') }]"
+              <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('B34')]: getClassForTable('B34') }]"
                 data-id="B34"><span>B34</span><span>B33</span></a>
               <a href="#" class="table"  :class="[{ [getClassForTable('B32')]: getClassForTable('B32') }]" data-id="B32">B32</a>
               <a href="#" class="table" :class="[{ [getClassForTable('B31')]: getClassForTable('B31') }]" data-id="B31">B31</a>
@@ -276,7 +276,7 @@
               <a href="#" class="table-l d-flex flex-column justify-content-between":class="[{ [getClassForTable('A21')]: getClassForTable('A21') }]"
                 data-id="A21"><span>A21</span><span>A20</span></a>
 
-              <a href="#" class="table"  :class="['table', { booked: isActive('A19') }]" data-id="A19">A19</a>
+              <a href="#" class="table"  :class="[{ [getClassForTable('A19')]: getClassForTable('A19') }]" data-id="A19">A19</a>
               <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('A19')]: getClassForTable('A19') }]"
                 data-id="A18"><span>A18</span><span>A17</span></a>
 
@@ -286,7 +286,7 @@
             <div class="d-flex flex-column gap-1">
               <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('A32')]: getClassForTable('A32') }]"
                 data-id="A32"><span>A32</span><span>A31</span></a>
-              <a href="#" class="table" :class="['table', { booked: isActive('A30') }]" data-id="A30">A30</a>
+              <a href="#" class="table" :class="[{ [getClassForTable('A30')]: getClassForTable('A30') }]" data-id="A30">A30</a>
               <a href="#" class="table-l d-flex flex-column justify-content-between" :class="[{ [getClassForTable('A29')]: getClassForTable('A29') }]"
                 data-id="A29"><span>A29</span><span>A28</span></a>
 
@@ -393,7 +393,7 @@
                 data-id="A82"><span>A82</span><span>A81</span></a>
 
               <a href="#" class="table"  :class="[{ [getClassForTable('D5')]: getClassForTable('D5') }]" data-id="D5">D5</a>
-              <a href="#" class="table"  :class="[{ [getClassForTable('D4')]: getClassForTable('D4') }]" @click="handleTableClick('D4')" data-id="D4">D4</a>
+              <a href="#" class="table"  :class="[{ [getClassForTable('D4')]: getClassForTable('D4') }]"  data-id="D4">D4</a>
             </div>
             <div class="d-flex flex-column gap-1">
               <a href="#" class="table-l d-flex flex-column justify-content-between"   :class="[{ [getClassForTable('A96')]: getClassForTable('A96') }]"
@@ -425,7 +425,7 @@
                   <a href="#" class="table" :class="[{ [getClassForTable('vvip6')]: getClassForTable('vvip6') }]" data-id="vvip6">6</a>
                 </div>
                 <div class="d-flex flex-column ms-3">
-                  <a href="#" class="table" class="['table', { booked: isActive('vvip11') }]"  data-id="vvip11">11</a>
+                  <a href="#" class="table" :class="[{ [getClassForTable('vvip11')]: getClassForTable('vvip11') }]"  data-id="vvip11">VVIP 11</a>
                 </div>
                 <div class="d-flex flex-column justify-content-end gap-2">
                   <div class="empty-box"></div>
@@ -458,7 +458,7 @@
         </div>
         <div class="zone-bar mb-3">
           <div class="d-flex gap-2 mb-3">
-            <a href="#" class="table align-self-end" data-id="bar9">9</a>
+            <a href="#" class="table align-self-end" :class="[{ [getClassForTable('bar9')]: getClassForTable('bar9') }]"  data-id="bar9">9</a>
             <div class="bar flex-grow-1">
               bar <i class="bi bi-cup-straw"></i>
             </div>
@@ -564,31 +564,31 @@
         <form id="form-reserve">
           <div class="modal-body">
             <div class="form-check mb-3">
-              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault1" value="a" />
+              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault1" value="N" />
               <label class="form-check-label" for="flexRadioDefault1">
                 โต๊ะว่าง
               </label>
             </div>
             <div class="form-check mb-3">
-              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault2" value="b" />
+              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault2" value="A" />
               <label class="form-check-label" for="flexRadioDefault2">
                 จองแล้ว (สีเทา)
               </label>
             </div>
             <div class="form-check mb-3">
-              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault3" value="p1" />
+              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault3" value="B" />
               <label class="form-check-label" for="flexRadioDefault3">
                 Premium 1 (สีเขียว)
               </label>
             </div>
             <div class="form-check mb-3">
-              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault4" value="p2" />
+              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault4" value="C" />
               <label class="form-check-label" for="flexRadioDefault4">
                 Premium 2 (สีน้ำเงิน)
               </label>
             </div>
             <div class="form-check mb-3">
-              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault5" value="p3" />
+              <input class="form-check-input" type="radio" name="status" id="flexRadioDefault5" value="D" />
               <label class="form-check-label" for="flexRadioDefault5">
                 Premium 3 (สีม่วง)
               </label>
@@ -605,99 +605,30 @@
     </div>
   </div>
 
-  <script src="./bootstrap-5.3.2-dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
 
-  <script>
-    const tableEl = document.querySelectorAll(".table");
-    const tableLEl = document.querySelectorAll(".table-l");
-    const radioEl = document.querySelectorAll("input[name='status']");
-    const formEl = document.querySelector("#reserve-modal");
-
-    document.addEventListener("DOMContentLoaded", function () {
-      let myModal = new bootstrap.Modal(
-        document.querySelector("#reserve-modal")
-      );
-
-      for (let i = 0; i < tableEl.length; i++) {
-        tableEl[i].addEventListener("click", (e) => {
-          e.preventDefault();
-          myModal.show();
-
-          let tableID = tableEl[i].dataset.id;
-          let modalTitle = document.querySelector(".modal-title span");
-
-          modalTitle.textContent = tableID;
-        });
-      }
-
-      for (let i = 0; i < tableLEl.length; i++) {
-        tableLEl[i].addEventListener("click", (e) => {
-          e.preventDefault();
-          myModal.show();
-
-          let tableID = tableLEl[i].dataset.id;
-          let modalTitle = document.querySelector(".modal-title span");
-
-          modalTitle.textContent = tableID;
-        });
-      }
-
-      myModal._element.addEventListener("hidden.bs.modal", () => {
-        radioEl.forEach(function (radio) {
-          radio.checked = false;
-        });
-      });
-
-      formEl.addEventListener("submit", (e) => {
-        e.preventDefault();
-
-        let tableID = document.querySelector(".modal-title span").textContent;
-        const tableEl = document.querySelector(`[data-id="${tableID}"]`);
-
-        console.log(tableID);
-        console.log(tableEl);
-
-        let radioChecked = Array.from(radioEl).find((radio) => radio.checked);
-
-        console.log(radioChecked);
-
-        radioChecked.value == "p3"
-          ? tableEl.classList.add("p3")
-          : tableEl.classList.remove("p3");
-        radioChecked.value === "p2"
-          ? tableEl.classList.add("p2")
-          : tableEl.classList.remove("p2");
-        radioChecked.value === "p1"
-          ? tableEl.classList.add("p1")
-          : tableEl.classList.remove("p1");
-        radioChecked.value === "b"
-          ? tableEl.classList.add("reserve")
-          : tableEl.classList.remove("reserve");
-
-        myModal.hide()
-      });
-    });
-  </script>
   <script>
     new Vue({
       el: '#app',
       data: {
-          bookingInfo: {
-          date: "2023-12-11",
-          tables: [
-            {"table": "B5", "bookedType": "C"},
-            {"table": "D2", "bookedType": "A"},
-            {"table": "D3", "bookedType": "B"},
-            {"table": "D4", "bookedType": "B"},
-            {"table": "D5" , "bookedType": "A"},
-            {"table": "S1" , "bookedType": "D"},
-            {"table": "E11" , "bookedType": "D"},
-            {"table": "B16" , "bookedType": "A"},
-          ]
-        }
+      today : `<?PHP echo @$_GET['date']; ?>`,
+      bookingInfo: {
+        date: '',
+        tables: []
       },
-      mounted() {
-        const tableEl = document.querySelectorAll(".table");
+      formData: {
+        table: '',
+        type: '',
+        date: '',
+        created: 1,
+        action : "add" 
+    }
+    },
+    mounted() {
+      const vm = this;
+      // this.today = this.getCurrentDate();
+      this.fetchBookingData(this.today);
+    const tableEl = document.querySelectorAll(".table");
     const tableLEl = document.querySelectorAll(".table-l");
     const radioEl = document.querySelectorAll("input[name='status']");
     const formEl = document.querySelector("#reserve-modal");
@@ -750,48 +681,89 @@
 
         // console.log(radioChecked);
 
-        radioChecked.value == "p3"
-          ? tableEl.classList.add("p3")
-          : tableEl.classList.remove("p3");
-        radioChecked.value === "p2"
-          ? tableEl.classList.add("p2")
-          : tableEl.classList.remove("p2");
-        radioChecked.value === "p1"
-          ? tableEl.classList.add("p1")
-          : tableEl.classList.remove("p1");
-        radioChecked.value === "b"
+        radioChecked.value == "A"
           ? tableEl.classList.add("reserve")
           : tableEl.classList.remove("reserve");
-
+        radioChecked.value === "B"
+          ? tableEl.classList.add("p1")
+          : tableEl.classList.remove("p1");
+        radioChecked.value === "C"
+          ? tableEl.classList.add("p2")
+          : tableEl.classList.remove("p2");
+        radioChecked.value === "D"
+          ? tableEl.classList.add("p3")
+          : tableEl.classList.remove("p3");
         myModal.hide()
+
+        vm.formData.table = tableEl.dataset.id; 
+        vm.formData.type = radioChecked.value;
+        vm.formData.date = vm.today;
+        vm.formData.action = (radioChecked.value == "N") ? "destroy" : "add";
+        vm.submitForm();
       });
     });
   },
       methods: {
-        isActive(table) {
-          return this.bookingInfo.tables.some(bookedTable => bookedTable.table === table);
-        },
-        handleTableClick(table) {
-            console.log("Table clicked:", table);
-        },
+        submitForm() {
+          // Construct the post data
+          const postData = {
+            table: this.formData.table,
+            type: this.formData.type,
+            date: (this.formData.date  == "") ? this.getCurrentDate() : this.formData.date,
+            created: this.formData.created,
+            action: this.formData.action
+          };
+
+          // Make a POST request
+          fetch('api.php', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            body: JSON.stringify(postData),
+          })
+          .then(response => response.json())
+          .then(data => {
+            console.log('Success:', data);
+          })
+          .catch((error) => {
+            console.error('Error:', error);
+          });
+       },
+        fetchBookingData(date) {
+          fetch(`api.php?date=${date}`)
+              .then(response => response.json())
+              .then(data => {
+                this.bookingInfo = data.bookingInfo;
+              })
+              .catch(error => console.error('Error fetching data:', error));
+          },
         getClassForTable(table) {
           const booking = this.bookingInfo.tables.find(bookedTable => bookedTable.table === table);
           if (booking) {
             switch (booking.bookedType) {
-              case 'A': return 'p1';
-              case 'B': return 'p2';
-              case 'C': return 'p3';
-              case 'D': return 'reserve';
+              case 'A': return 'reserve';
+              case 'B': return 'p1';
+              case 'C': return 'p2';
+              case 'D': return 'p3';
               default: return '';
             }
           }
           return '';
-        }
+        },
+        getCurrentDate() {
+          const now = new Date();
+          const year = now.getFullYear();
+          const month = String(now.getMonth() + 1).padStart(2, '0');
+          const day = String(now.getDate()).padStart(2, '0');
+          return `${year}-${month}-${day}`;
+        },
       },
+      
   
     });
   
-    app.mount('#app')
+    // app.mount('#app')
   </script>
 </body>
 
